<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

    <ImageView
            android:scaleType="centerCrop"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_foreground"/>
    <EditText
            android:background="@color/colorWhite"
            android:textColorHint="@color/colorPrimaryHint"
            android:padding="10dp"
            android:hint="@string/user_name"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    <EditText
            android:background="@color/colorWhite"
            android:textColorHint="@color/colorPrimaryHint"
            android:padding="10dp"
            android:hint="@string/email"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <EditText
            android:background="@color/colorWhite"
            android:textColorHint="@color/colorPrimaryHint"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="@string/password"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button android:text="@string/register"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tv_goTologin"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>