<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="100dp"
              android:gravity="center_vertical"
              android:orientation="horizontal">

    <ImageView
            android:src="@drawable/ic_launcher_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/tv_name_group"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/app_name_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginTop="10dp"
                android:text="@string/app_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginTop="10dp"
                android:text="@string/app_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>